# linux_monitor_system

./: .gitignore  README.md
docs/: manager_api.md
manager/: CMakeLists.txt
manager/include/: host_manager.h
manager/include/rpc/: grpc_server.h
manager/include/utils/: safe_queue.h
manager/src/: host_manager.cpp  main.cpp
manager/src/rpc/: grpc_server.cpp
proto/: monitor_info.proto
worker/src/: main.cpp
worker/src/ebpf/: net_stats.bpf.c  test_net_ebpf.cpp
worker/src/kmod/: cpu_stat_collector.c  softirq_collector.c
worker/src/monitor/: cpu_stat_monitor.cpp  net_ebpf_monitor.cpp
